FIX: class added for align loader in attachment picture in post

--- a/src/styles/components/_fileUploader.scss
+++ b/src/styles/components/_fileUploader.scss
@@ -108,14 +108,6 @@
 
     .lds-dual-ring {
       background-color: rgba(0, 0, 0, .4);
-
-      .loader-text {
-        transform: translateY(-50%);
-
-        &:after {
-          margin-top: 0;
-        }
-      }
     }
   }
 
